--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>PKU-BIONet 2018</title>
+  <title>BIO1898 一八九八生物</title>
 
   <!-- css -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -44,7 +44,6 @@
         <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#schedule">Schedule</a></li>
         <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#speakers">Speakers</a></li>
         <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#panelists">Panelists</a><li>
-        <!-- <li><a data-scroll href="#partner">Partner</a></li> -->
         <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#sponsors">Sponsors</a></li>
         <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#faq">FAQ</a></li>
 
