--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
       </div> <!-- /.Counter Div -->
     </div> <!-- /.Container Div -->
 
-    <h1>PKU BIO-Net Symposium 2018</h1>
-    <h2>2018年度北京大学北美生物医学年会</h2>
-    <h3>June 9, 2018 / San Francisco, CA</h3>
+    <h1>BIO1898</h1>
+    <h2>一八九八生物</h2>
+    <h3>June 16, 2018 / Los Angeles, CA</h3>
 
     <input type="button" class="btn btn-warning" value="Register Now" onclick="location.href = 'https://www.eventbrite.com/e/pku-bio-net-2018-tickets-43277809092';">
     <ul class="social-block">
