--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="logo" href="http://pkubio.org/">
           <!-- logo image  -->
           <img src="assets/images/logo.png" alt="Logo">
-          PKU BIO-Net Symposium
+          BIO1898 一八九八生物
         </a>
       </div>
 
@@ -40,12 +40,12 @@
 
         <!-- navigation menu -->
         <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#about">About</a></li>
-        <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#location">Location</a></li>
-        <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#schedule">Schedule</a></li>
-        <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#speakers">Speakers</a></li>
-        <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#panelists">Panelists</a><li>
-        <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#sponsors">Sponsors</a></li>
-        <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#faq">FAQ</a></li>
+        <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#strategy">Strategies</a></li>
+        <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#funds">Funds</a></li>
+        <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#people">People</a></li>
+        <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#contact">Contact</a><li>
+        <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#news">News</a></li>
+        <li><a data-scroll data-toggle="collapse" data-target=".navbar-collapse.in" href="#disclosures">Disclosures</a></li>
 
       </ul>
     </div>
